--- a/streams/mrbeastvsig/1.html
+++ b/streams/mrbeastvsig/1.html
@@ -945,59 +945,83 @@ setInterval(() => {
 
             setInterval(() => {
           fetch(
-            `https://api-v2.nextcounts.com/api/instagram/user/${id2}`
+            `https://livecounts.xyz/api/instagram-live-follower-count/live/${id2}`
           )
             .then((res) => res.json())
             .then((data) => {
-                document.getElementById("image2").src = data.avatar;
-                                            document.getElementById("name2").textContent = data.nickname;
-                                document.getElementById("username2").textContent = `@${data.username}`
-                  document.getElementById("subs2").innerHTML = data.followers;
-                      document.getElementById("views2").innerHTML = data.posts;
-                document.getElementById("gap").innerHTML = data.followers - subs;
+                fetch(
+            `https://livecounts.xyz/api/instagram-live-follower-count/search/${id2}`
+          )
+            .then((res) => res.json())
+            .then((data2) => {
+                document.getElementById("image2").src = `https://livecounts.xyz${data2.results[0].pfp}`;
+                                            document.getElementById("name2").textContent = data2.results[0].name;
+                                document.getElementById("username2").textContent = `@${data2.results[0].username}`
+                  document.getElementById("subs2").innerHTML = data.counts[0];
+                      document.getElementById("views2").innerHTML = data.counts[2];
+                document.getElementById("gap").innerHTML = data.counts[0] - subs;
+                });
                 });
                   }, 2000);
 
     setInterval(() => {
       fetch(
-        `https://api-v2.nextcounts.com/api/instagram/user/${id5}`
+        `https://livecounts.xyz/api/instagram-live-follower-count/live/${id5}`
       )
         .then((res) => res.json())
         .then((data) => {
-            document.getElementById("image3").src = data.avatar;
-                                        document.getElementById("name3").textContent = data.nickname;
-                            document.getElementById("username3").textContent = `@${data.username}`
-              document.getElementById("subs5").innerHTML = data.followers;
-            document.getElementById("gap2").innerHTML = data.followers - subs;
+            fetch(
+            `https://livecounts.xyz/api/instagram-live-follower-count/search/${id5}`
+          )
+            .then((res) => res.json())
+            .then((data2) => {
+                document.getElementById("image3").src = `https://livecounts.xyz${data2.results[0].pfp}`;
+                                        document.getElementById("name3").textContent = data2.results[0].name;
+                            document.getElementById("username3").textContent = `@${data2.results[0].username}`
+              document.getElementById("subs5").innerHTML = data.counts[0];
+            document.getElementById("gap2").innerHTML = data.counts[0] - subs;
             });
+        });
               }, 2000);
 
     setInterval(() => {
       fetch(
-        `https://api-v2.nextcounts.com/api/instagram/user/${id6}`
+        `https://livecounts.xyz/api/instagram-live-follower-count/live/${id6}`
       )
         .then((res) => res.json())
         .then((data) => {
-            document.getElementById("image4").src = data.avatar;
-                                        document.getElementById("name4").textContent = data.nickname;
-                            document.getElementById("username4").textContent = `@${data.username}`
-              document.getElementById("subs6").innerHTML = data.followers;
-            document.getElementById("gap3").innerHTML = data.followers - subs;
+            fetch(
+            `https://livecounts.xyz/api/instagram-live-follower-count/search/${id6}`
+          )
+            .then((res) => res.json())
+            .then((data2) => {
+                document.getElementById("image4").src = `https://livecounts.xyz${data2.results[0].pfp}`;
+                                        document.getElementById("name4").textContent = data2.results[0].name;
+                            document.getElementById("username4").textContent = `@${data2.results[0].username}`
+              document.getElementById("subs6").innerHTML = data.counts[0];
+            document.getElementById("gap3").innerHTML = data.counts[0] - subs;
             });
+        });
               }, 2000);
 
     setInterval(() => {
       fetch(
-        `https://api-v2.nextcounts.com/api/instagram/user/${id7}`
+        `https://livecounts.xyz/api/instagram-live-follower-count/live/${id7}`
       )
         .then((res) => res.json())
         .then((data) => {
-            document.getElementById("image5").src = data.avatar;
-                                        document.getElementById("name5").textContent = data.nickname;
-                            document.getElementById("username5").textContent = `@${data.username}`
-              document.getElementById("subs7").innerHTML = data.followers;
-                  document.getElementById("gap4").innerHTML = data.followers - subs;
+            fetch(
+            `https://livecounts.xyz/api/instagram-live-follower-count/search/${id7}`
+          )
+            .then((res) => res.json())
+            .then((data2) => {
+                document.getElementById("image5").src = `https://livecounts.xyz${data2.results[0].pfp}`;
+                                        document.getElementById("name5").textContent = data2.results[0].name;
+                            document.getElementById("username5").textContent = `@${data2.results[0].username}`
+              document.getElementById("subs7").innerHTML = data.counts[0];
+                  document.getElementById("gap4").innerHTML = data.counts[0] - subs;
             });
+        });
               }, 2000);
 
                 setInterval(() => {
