--- a/streams/mrbeastvsig/1.html
+++ b/streams/mrbeastvsig/1.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700" rel="stylesheet">
   <link rel=stylesheet href="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/odometer.css">
   <script src="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/odometer.js"></script>
+    <meta http-equiv="refresh" content="0;url=./nextcounts1.html">
 </head>
 <body>
     <div><span id="subs1" class="odometer">0</span></div>
