--- a/streams/ronaldo/compare.html
+++ b/streams/ronaldo/compare.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 </head>
 
-<body style="font-family: Roboto; color: var(--fg-color, #fff); background-color: var(--bg-color, #E7541E);">
+<body style="font-family: Roboto; color: var(--fg-color, #fff); background-color: var(--bg-color, transparent);">
     <div style="height: auto; display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px;">
         <div style="padding: 0px 4px; text-align: center; background-color: var(--counter-bg-color, black);">
             <img id="banner1"
