--- a/streams/ronaldo/2.html
+++ b/streams/ronaldo/2.html
@@ -54,7 +54,7 @@
     let battle = {};
 
     odometers = Odometer.init();
-    for (let i = 0; i < data.odometers.length; i++) {
+    for (let i = 0; i < odometers.length; i++) {
     odometers[i].options = {
         animation: ['default','byDigit','count', 'minimal'][1],
         downColor: "white",
