--- a/streams/ronaldo/2.html
+++ b/streams/ronaldo/2.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>HuntingStats378 - Compare</title>
-    <link href="https://lcedit.com/odometer/odometer.css" rel="stylesheet">
+    <link href="https://huntingstats378.github.io/main/assets/ess/odometer.css" rel="stylesheet">
     <link rel="icon" href="https://huntingstats378.github.io/HuntingStats378/main/images/logo.png">
     <meta charSet="utf-8" />
     <meta name="description" content="HuntingStats378 - Compare" />
@@ -46,25 +46,12 @@
         </div>
     </center>
 </body>
-<script src="https://lcedit.com/odometer/odometer.js"></script>
+<script src="https://huntingstats378.github.io/main/assets/ess/odometer.js"></script>
 <script>
     var channelsIds = [];
     var channels = [];
     let sortedChannels = [];
     let battle = {};
-
-    odometers = Odometer.init();
-    for (let i = 0; i < odometers.length; i++) {
-    odometers[i].options = {
-        animation: ['default','byDigit','count', 'minimal'][1],
-        downColor: "white",
-        duration: 2 * 1000,
-        removeLeadingZeros: 1 === 1,
-        reverseAnimation: false,
-        format: ",ddd",
-        upColor: "white"
-    }
-    }
 
     async function fetchChannelIds() {
         await fetch(`https://corsproxy.io/?https://www.noxinfluencer.com/ws/mobile/channel?pageSize=199&rankSize=10000`)
