--- a/streams/ronaldo/2.html
+++ b/streams/ronaldo/2.html
@@ -58,7 +58,7 @@
         animation: ['default', 'byDigit', 'count', 'minimal'][1],
         downColor: white,
         duration: 2 * 1000,
-        removeLeadingZeros: 1 === 1,
+        removeLeadingZeros: true,
         reverseAnimation: false,
         format: ",ddd",
         upColor: white
