--- a/streams/goldmines100m/counts.html
+++ b/streams/goldmines100m/counts.html
@@ -33,7 +33,16 @@
     }
 </style>
 <script>
-    const params = new URLSearchParams(window.location.search);
+    const urlParams = new URLSearchParams(window.location.search);
+    const params = {};
+    for (const [key, value] of urlParams.entries()) {
+        if (!isNaN(value) && value.trim() !== '') {
+            params[key] = parseFloat(value);
+        } else {
+            params[key] = value;
+        }
+    }
+    return params;
     var bg = params.get("background") || "black";
     var fc = params.get("fontcolor") || "white";
     var fa = params.get("fontalign") || "center";
