--- a/main/assets/counters/index.html
+++ b/main/assets/counters/index.html
@@ -54,6 +54,8 @@ var font = urlParams.get("font") || "Roboto";
 var sizee = urlParams.get("size") || "50";
 var fw = urlParams.get("fontweight") || "400";
 var counter = urlParams.get("counter") || 0;
+var studio = urlParams.get("studio") || false;
+var animation = urlParams.get("animation") || 0;
 
 // Validate and handle font size
 function validateSize(input) {
