--- a/main/assets/counters/index.html
+++ b/main/assets/counters/index.html
@@ -1,6 +1,6 @@
 <link id="font" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800&display=swap" rel="stylesheet">
-<link rel=stylesheet href="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/odometer.css">
-<script src="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/odometer.js"></script>
+<link rel=stylesheet href="https://lcedit.com/odometer/odometer.css">
+<script src="https://lcedit.com/odometer/odometer.js"></script>
 
 <body>
     <span id="count" class="odometer">0</span>
