Update and rename index.html to index.html

--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -60,6 +60,7 @@ var est = urlParams.get("est") || 0;
 var up = urlParams.get("up") || fc;
 var down = urlParams.get("down") || fc;
 var format = urlParams.get("format") || 0;
+var clock = urlParams.get("clock") || false;
 
 // Validate and handle font size
 function validateSize(input) {
