--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -89,7 +89,7 @@ function durationNumber(num) {
 odometers = Odometer.init();
 
 setInterval(() => {
-if (time === true) {
+if (clock === true) {
     odometers[0].options = {
         animation: ['default','byDigit','count', 'minimal'][animation],
         downColor: down,
