--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -91,6 +91,7 @@ function durationNumber(num) {
 }
 
 odometers = Odometer.init();
+console.log(clock);
 
 setInterval(() => {
 if (clock === true) {
