--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -35,6 +35,7 @@
 <script>
 const urlParams = new URLSearchParams(window.location.search);
 const params = {};
+const odometers = Odometer.init();
 
 // Convert URL parameters to the `params` object with number and boolean parsing
 for (const [key, value] of urlParams.entries()) {
@@ -66,6 +67,7 @@ var down = urlParams.get("down") || fc;
 var format = urlParams.get("format") || 0;
 var clock = urlParams.get("clock") || false;
 var duration = urlParams.get("duration") || 2;
+var est = urlParams.get("est") || 0;
 
 // Validate and handle font size
 function validateSize(input) {
@@ -89,8 +91,6 @@ function durationNumber(num) {
     // If the number doesn't start with '0', return the number as it is
     return num;
 }
-
-odometers = Odometer.init();
 
 setInterval(() => {
 if (clock == true) {
