--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -121,12 +121,27 @@ document.getElementById("count").innerHTML = parseInt(hours + minutes + seconds)
         format: [',ddd','ddd',' ddd',':dd'][format],
         upColor: up
 }
-// Set interval to fetch data
+if (studio == true) {
+    fetch(`https://corsproxy.io/?https://studio.nia-statistics.com/api/channel/${id}`)
+        .then((res) => res.json())
+        .then((data) => {
+            document.getElementById("count").innerHTML = data.channels.counts[counter].count;
+        });
+}
+if (est === 0) {
     fetch(`https://mixerno.space/api/youtube-channel-counter/user/${id}`)
         .then((res) => res.json())
         .then((data) => {
             document.getElementById("count").innerHTML = data.counts[counter].count;
         });
+}
+if (est === 1) {
+    fetch(`https://mixerno.space/api/youtube-channel-counter/user/${id}`)
+        .then((res) => res.json())
+        .then((data) => {
+            document.getElementById("count").innerHTML = data.counts[counter].count;
+        });
+}
 }
 }, 2000);
 
