--- a/streams/elon200m/vote.html
+++ b/streams/elon200m/vote.html
@@ -72,7 +72,7 @@ setInterval(() => {
                 const num = match[0].replace(/,/g, '');
                 document.getElementById("count").innerHTML = num;
         });
-}, counter);
+}, (counter * 1000));
 
 // Apply styles using the fetched parameters
 document.documentElement.style.setProperty('--backcolor', bg);
