--- a/potd.html
+++ b/potd.html
@@ -1,6 +1,6 @@
 <h2 onclick="send()">button</h2>
 <script>
-const token = "MTA4NjE3MzIzMjIwNzQ5OTMxNg.GtpzFp.96a7xdIAECJ1dl1rdqmEp_RV4xj-eAaN4TzbyU";
+const token = "no";
 const channel = "1150236625620705321";
 
 function send() {
